// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormControlLayout is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <input />
</div>
`;

exports[`EuiFormControlLayout props fullWidth is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
/>
`;

exports[`EuiFormControlLayout props icon is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <eui_icon
    class="euiFormControlLayout__icon"
    type="alert"
  />
</div>
`;

exports[`EuiFormControlLayout props iconSide left is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <eui_icon
    class="euiFormControlLayout__icon"
    type="alert"
  />
</div>
`;

exports[`EuiFormControlLayout props iconSide right is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <eui_icon
    class="euiFormControlLayout__icon euiFormControlLayout__icon--right"
    type="alert"
  />
</div>
`;

exports[`EuiFormControlLayout props isLoading is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <eui_loading_spinner
    class="euiFormControlLayout__loading"
  />
</div>
`;
